Fix some vulnerabilities

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "start": "NODE_ENV=production node dist/forever.js dist/server.js",
-    "test": "grunt test",
+    "test": "mocha ./test/**/*.js",
     "clean": "rm -rf dist && mkdir dist",
     "dist": "yarn --silent clean && yarn --silent build-react && yarn --silent build-server && yarn --silent imagemin",
     "build-react": "cd front && yarn install && yarn build && cd ../ && yarn --silent copy-react",
@@ -29,17 +29,18 @@
   },
   "dependencies": {
     "bluebird": "~2.9.34",
-    "body-parser": "~1.13.3",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "errorhandler": "~1.4.2",
-    "express": "~4.13.3",
+    "express": "^4.16.4",
     "express-session": "^1.15.6",
     "express-winston": "~0.3.1",
     "glob": "~5.0.14",
-    "http-auth": "~2.2.7",
+    "http-auth": "^3.2.3",
     "keycloak-connect": "^5.0.0",
     "later": "~1.1.6",
-    "lodash": "~3.10.1",
+    "lodash": "^3.10.1",
+    "lodash-migrate": "^0.3.16",
     "method-override": "~2.3.5",
     "mustache": "^2.2.1",
     "mustache-express": "^1.2.2",
@@ -48,8 +49,8 @@
     "postal": "~1.0.6",
     "postal.diagnostics": "~0.7.3",
     "sequelize": "~1.7.0",
-    "serve-static": "~1.10.0",
-    "socket.io": "~1.4.0",
+    "serve-static": "^1.13.2",
+    "socket.io": "^2.2.0",
     "winston": "~1.0.1"
   },
   "optionalDependencies": {
@@ -60,16 +61,15 @@
     "sqlite3": "~4.0.6"
   },
   "devDependencies": {
-    "blanket": "~1.2.0",
+    "blanket": "^1.1.9",
     "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
     "imagemin-cli": "^4.0.1",
     "jshint-stylish": "^2.2.1",
-    "mocha": "~1.20.0",
+    "mocha": "^6.1.4",
     "nodemon": "^1.19.0",
     "should": "~7.0.2",
     "should-http": "0.0.4",
-    "socket.io-client": "~1.4.0",
     "sqlite3": "~4.0.6",
     "supertest": "~1.0.1",
     "yarn": "^1.15.2"
