--- a/front/package.json
+++ b/front/package.json
@@ -7,7 +7,7 @@
     "bootstrap": "^4.3.1",
     "filepond": "^4.4.2",
     "filepond-plugin-image-preview": "^4.1.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.8",
@@ -17,12 +17,12 @@
     "react-live-clock": "^3.1.0",
     "react-redux": "^7.0.1",
     "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
+    "react-scripts": "^3.0.0",
     "react-sortable-hoc": "^1.8.3",
     "react-toastify": "^5.0.1",
     "react-transition-group": "^4.0.0",
     "redux": "^4.0.1",
-    "socket.io-client": "1.4"
+    "socket.io-client": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
